<resources>
    <string name="URL_SERVER">&url_server;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="license">runtimelite,1000,rud6046938574,none,4N5X0H4AH5JB003AD169</string>
    <string name="action_search_title">Tìm kiếm</string>
    <string name="changepassword_oldpassword">Nhập mật khẩu cũ</string>
    <string name="changepassword_newpassword">Nhập mật khẩu mới</string>
    <string name="changepassword_newpasswordconfirm">Nhập lại mật khẩu mới</string>
    <string name="validate_change_password">Mật khẩu mới không khớp</string>
    <string name="validate_change_password_fail">Đổi mật khẩu thất bại</string>
    <string name="validate_change_password_lack">Mật khẩu phải đủ 6 ký tự</string>
    <string name="validate_password_old">Mật khẩu cũ không đúng</string>
    <string name="app_name">Quản lý sự cố Tân Hòa</string>
    <string name="dialog_title_add">Thêm sự cố</string>
    <string name="btn_OK">OK</string>
    <string name="btn_save">Lưu thay đổi</string>
    <string name="btn_cancel">Hủy</string>
    <string name="quit">THOÁT</string>
    <string name="title_su_co">Sự cố</string>
    <string name="people_info_title">Thông tin liên hệ</string>
    <string name="hoten_field">Họ và tên</string>
    <string name="sdt_field">Số điện thoại</string>
    <string name="email_field">Thư điện tử</string>
    <string name="address_field">Địa chỉ liên lạc</string>
    <string name="suco_info_title">Thông tin liên hệ</string>
    <string name="loaisuco_field">Loại sự cố</string>
    <string name="noidung_field">Nội dung sự cố</string>
    <string name="hinhanh_field">Hình ảnh đính kèm</string>
    <string name="vitrisuco_field">Vị trí sự cố</string>
    <string name="ALIAS_DONG_HO_KHACH_HANG">Đồng hồ khách hàng</string>
    <string name="ALIAS_DONG_HO_TONG">Đồng hồ tổng</string>
    <string name="ALIAS_ONG_NGANH">Ống ngánh</string>
    <string name="ALIAS_ONG_PHAN_PHOI">Ống phân phối</string>
    <string name="ALIAS_ONG_TRUYEN_DAN">Ống truyền dẫn</string>
    <string name="ALIAS_MOI_NOI">Mối nối</string>
    <string name="ALIAS_TRU_HONG">Trụ họng</string>
    <string name="ALIAS_DIEM_SU_CO">Điểm sự cố</string>
    <string name="ALIAS_VAN">Van</string>
    <string name="ALIAS_DIEM_AP_LUC">Điểm áp lực</string>
    <string name="ALIAS_DIEM_CUOI_ONG">Điểm cuối ống</string>
    <string name="ALIAS_DMA">DMA</string>
    <string name="ALIAS_THUA_DAT">Thửa đất</string>
    <string name="ALIAS_SONG_HO">Sông hồ</string>
    <string name="ALIAS_GIAO_THONG">Giao thông</string>
    <string name="ALIAS_HANH_CHINH">Hành chính</string>
    <string name="URL_DIEM_SU_CO">&url_server;/arcgis/rest/services/TanHoa/TanHoaSuCo/FeatureServer/0</string>
    <string name="URL_DONG_HO_KHACH_HANG">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/0</string>
    <string name="URL_DONG_HO_TONG">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/1</string>
    <string name="URL_ONG_NGANH">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/2</string>
    <string name="URL_ONG_PHAN_PHOI">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/3</string>
    <string name="URL_ONG_TRUYEN_DAN">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/4</string>
    <string name="URL_MOI_NOI">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/5</string>
    <string name="URL_TRU_HONG">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/6</string>
    <string name="URL_VAN">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/7</string>
    <string name="URL_DIEM_AP_LUC">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/8</string>
    <string name="URL_DIEM_CUOI_ONG">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/9</string>
    <string name="URL_DMA">&url_server;/arcgis/rest/services/TanHoa/TANHOAGIS/MapServer/10</string>
    <string name="URL_THUA_DAT">&url_server;/arcgis/rest/services/TanHoa/TANHOABasemap/MapServer/0</string>
    <string name="URL_SONG_HO">&url_server;/arcgis/rest/services/TanHoa/TANHOABasemap/MapServer/1</string>
    <string name="URL_GIAO_THONG">&url_server;/arcgis/rest/services/TanHoa/TANHOABasemap/MapServer/2</string>
    <string name="URL_HANH_CHINH">&url_server;/arcgis/rest/services/TanHoa/TANHOABasemap/MapServer/3</string>
    <string name="url_image_symbol_chuasuachua">http://sawagis.vn/tanhoa/Content/images/map/0.png</string>
    <string name="url_image_symbol_dangsuachua">http://sawagis.vn/tanhoa/Content/images/map/1.png</string>
    <string name="url_image_symbol_beNgam">http://cholon.sawagis.vn/images/map/bengam.png</string>
    <string name="url_image_symbol_hoanthanh">http://sawagis.vn/tanhoa/Content/images/map/3.png</string>
    <string name="path_saveImage">.qlsc</string>
    <string name="attachment">attachment</string>
    <string name="world_elevation_service">&url_server;/arcgis/rest/services/TanHoa/TanHoaSuCo/MapServer</string>
    <string name="service_feature_table">&url_server;/arcgis/rest/services/TanHoa/TanHoaSuCo/FeatureServer/0</string>
    <string name="tongloaitrangthai">tongloaitrangthai</string>
    <string name="title_activity_tra_cuu">TraCuuActivity</string>
    <string name="ket_qua_objectid">ket_qua_objectid</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_search">Tìm kiếm theo địa chỉ…</string>
    <string name="notify_add_feature">Vui lòng click vào một điểm trên bản đồ để thêm một sự cố</string>
    <string name="location_permission_denied">Chưa có quyền truy cập vị trí</string>
    <string name="nav_refresh">Làm mới dữ liệu</string>
    <string name="nav_tra_cuu">Tra cứu</string>
    <string name="nav_find_route">Tìm đường đi</string>
    <string name="nav_xoa_tim_kiem">Xóa các tìm kiếm</string>
    <string name="nav_an_hien_nut_chuc_nang">Ẩn/hiện nút chức năng</string>
    <string name="nav_cai_dat">Cài đặt</string>
    <string name="nav_change_password">Đổi mật khẩu</string>
    <string name="nav_log_out">Đăng xuất</string>
    <string name="nav_cai_dat_them_su_co_title">Phương thức thêm điểm sự cố</string>
    <string name="nav_cai_dat_tim_kiem_title">Tùy chọn tìm kiếm</string>
    <string name="nav_thong_ke">Thống kê</string>
    <string name="nav_thong_ke_tong_su_co">Tổng các sự cố: </string>
    <string name="SuCo_TrangThai_ChuaSuaChua">Chưa sửa chữa</string>
    <string name="SuCo_TrangThai_ChuaSuaChuaBeNgam">Chưa sửa chữa bể ngầm</string>
    <string name="SuCo_TrangThai_DangSuaChua">Đang sửa chữa</string>
    <string name="SuCo_TrangThai_DaSuaChua">Đã sửa chữa</string>
    <string name="SuCo_TrangThai_HoanThanh">Hoàn thành</string>
    <string name="async_dang_xu_ly">Đang xử lý…</string>
    <string name="async_dang_lay_hinh_anh_dinh_kem">Đang tải hình ảnh đính kèm…</string>
    <string name="async_dang_cap_nhat_giao_dien">Đang cập nhật giao diện…</string>
    <string name="preference_settings_phuong_thuc_them_diem_su_co">preference_settings_phuong_thuc_them_diem_su_co</string>
    <string name="preference_settings_phuong_thuc_them_diem_su_co_cham_diem">Chấm điểm trên bản đồ</string>
    <string name="preference_settings_phuong_thuc_them_diem_su_co_toa_do">Theo tọa độ vị trí</string>
    <string name="preference_settings_phuong_thuc_them_diem_su_co_keo_tha">Kéo thả bản đồ</string>
    <string name="preference_settings_tuy_chon_tim_kiem">preference_settings_tuy_chon_tim_kiem</string>
    <string name="preference_settings_tuy_chon_tim_kiem_co_san">Tìm kiếm sự cố</string>
    <string name="preference_settings_tuy_chon_tim_kiem_chua_co">Tìm vị trí</string>
    <string name="format_day_yearfirst">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_time_day_month_year">dd/MM/yyyy</string>
    <string name="title_activity_find_route">Tìm đường đi</string>
    <string name="find_route_xem_ban_do">Xem bản đồ</string>
    <string name="find_route_cac_buoc">Các bước</string>
    <string name="find_route_diem_bat_dau">Nhập điểm bắt đầu</string>
    <string name="find_route_diem_ket_thuc">Nhập điểm kết thúc</string>
    <string name="find_route_image_change">Đổi địa điểm</string>
    <string name="find_route_image_route">Độ dài đường đi</string>
    <string name="find_route_image_time">Thời gian đi</string>
    <string name="find_route_image_menu">Menu</string>
    <string name="find_route_textview_route">0 km</string>
    <string name="find_route_textview_time">0 min</string>
    <string name="find_route_textview_begin">Từ</string>
    <string name="find_route_textview_end">Đến</string>
    <string name="todo">TODO</string>
    <string name="title_layer_default">Mặc định</string>
    <string name="title_layer_street">Đường phố</string>
    <string name="title_layer_satellite">Vệ tinh</string>
    <string name="action_logout">Đăng xuất</string>
    <string name="validate_no_connect">Không có kết nối internet</string>
    <string name="info_login_empty">Tên đăng nhập hoặc mật khẩu không được để trống</string>
    <string name="validate_login_fail">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="validate_hieuluc">Đồng hồ của khách hàng đã không còn hiệu lực\nVui lòng liên hệ công ty Cấp nước Tân Hòa\nđể biết thêm thông tin</string>
    <string name="validate_tracuutiennuoc_invalidtime">Chưa đến đợt đọc số!\nVui lòng chọn thời gian khác để tra cứu</string>
    <string name="change_password_check_old_password_message">Đang kiểm tra mật khẩu cũ…</string>
    <string name="change_password_message">Đang đổi mật khẩu…</string>
    <string name="preparing">Đang khởi tạo bản đồ…</string>
    <string name="loadingLegend">Đang khởi tạo chú thích…</string>
    <string name="preference_username">username</string>
    <string name="preference_password">pasword</string>
    <string name="preference_displayname">displayname</string>
    <string name="sql_coloumn_login_displayname">displayname</string>
    <string name="sql_coloumn_login_tanbinh">tanbinh</string>
    <string name="sql_coloumn_login_tanphu">tanphu</string>
    <string name="sql_coloumn_login_phunhuan">phunhuan</string>
    <string name="sql_coloumn_docso_cscu">cscu</string>
    <string name="sql_coloumn_docso_csmoi">csmoi</string>
    <string name="sql_coloumn_docso_tieuthucu">tieuthucu</string>
    <string name="sql_coloumn_docso_tieuthumoi">tieuthumoi</string>
    <string name="sql_coloumn_docso_tiennuoc">tiennuoc</string>
    <string name="sql_coloumn_docso_thuevat">thue</string>
    <string name="sql_coloumn_docso_phibvmt">bvmt</string>
    <string name="sql_coloumn_docso_tongtien">tongtien</string>
    <string name="sql_coloumn_sys_id">id</string>
    <string name="sql_coloumn_sys_title">title</string>
    <string name="sql_coloumn_sys_url">url</string>
    <string name="sql_coloumn_sys_number_order">NumericalOder</string>
    <string name="sql_coloumn_sys_iscreate">iscreate</string>
    <string name="sql_coloumn_sys_isdelete">isdelete</string>
    <string name="sql_coloumn_sys_isedit">isedit</string>
    <string name="sql_coloumn_sys_isview">isview</string>
    <string name="sql_coloumn_sys_outfield">outfields</string>
    <string name="sql_coloumn_sys_definition">definition</string>
    <string name="sql_coloumn_lichsuds_nam">nam</string>
    <string name="sql_coloumn_lichsuds_ky">ky</string>
    <string name="sql_coloumn_lichsuds_nhanviends">nhanviends</string>
    <string name="sql_coloumn_role_role">role</string>
    <string name="sql_coloumn_role_groupRole">groupRole</string>
    <string name="role_phong_giam_nuoc">pgn</string>
    <string name="group_role_admin">admin</string>
    <string name="group_role_thicong">tc</string>
    <string name="group_role_giamsat">gs</string>
    <string name="sql_login">select *
					 from &table_sys_account; a
					 inner join &table_sys_role; r on r.id = a.Role where username = ? and password = ?</string>
</resources>