<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
    <!--<item-->
    <!--android:id="@+id/nav_camera"-->
    <!--android:icon="@drawable/ic_menu_camera"-->
    <!--andraliasitle="Import" />-->
    <!--<item-->
    <!--android:id="@+id/nav_gallery"-->
    <!--android:icon="@drawable/ic_menu_gallery"-->
    <!--andraliasitle="Gallery" />-->
    <!--<item-->
    <!--android:id="@+id/nav_slideshow"-->
    <!--android:icon="@drawable/ic_menu_slideshow"-->
    <!--andraliasitle="Slideshow" />-->
    <!--<item-->
    <!--android:id="@+id/nav_manage"-->
    <!--android:icon="@drawable/ic_menu_manage"-->
    <!--andraliasitle="Tools" />-->
    <!--</group>-->

    <item android:title="Chức năng">
        <menu>
            <group android:checkableBehavior="single">
                <!--<item-->

                    <!--android:id="@+id/nav_thongke"-->
                    <!--android:icon="@drawable/ic_statistic_black_24dp"-->
                    <!--android:title="@string/nav_thong_ke" />-->
                <!--<item-->
                <!--android:id="@+id/nav_tracuu"-->
                <!--android:icon="@drawable/ic_search"-->
                <!--android:title="@string/nav_tra_cuu" />-->
                <!--<item-->
                    <!--android:id="@+id/nav_find_route"-->
                    <!--android:icon="@drawable/ic_navigation_black_24dp"-->
                    <!--android:title="@string/nav_find_route" />-->
                <item
                    android:id="@+id/nav_list_task"
                    android:icon="@drawable/ic_list_task_black_24dp"
                    android:title="@string/nav_list_task" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reload"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/nav_refresh" />
        <item
            android:id="@+id/nav_show_hide_complete"
            android:icon="@drawable/ic_complete_gray_32dp"
            android:title="@string/nav_show_hide_complete" />
        <item
            android:id="@+id/nav_delete_searching"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/nav_xoa_tim_kiem" />
        <item
            android:id="@+id/nav_visible_float_button"
            android:icon="@drawable/ic_visible_black_24dp"
            android:title="@string/nav_an_hien_nut_chuc_nang" />
        <!--<item-->
        <!--android:id="@+id/nav_setting"-->
        <!--android:icon="@drawable/ic_settings"-->
        <!--android:title="@string/nav_cai_dat" />-->
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/nav_change_password" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/nav_log_out" />
    </group>
    <item
        android:id="@+id/nav_version"
        android:title=""></item>


</menu>
